# thinkthinking

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  xiaohongshu-posts-2026.csv
.agents/skills/opencli-browser/: SKILL.md
.agents/skills/opencli-usage/: SKILL.md
.agents/skills/vibe-product-design/: SKILL.md
.agents/skills/vibe-product-design/config/: prototype-style.yaml
.agents/skills/vibe-product-design/references/: 00-产品概述.md  01-需求分析.md  02-商业画布.md  03-用户旅程.md  04-业务流程.md  05-功能设计.md  功能模块PRD.md  澄清问卷.md  输出格式规范.md
.agents/skills/vibe-writing/: SKILL.md
.agents/skills/zenmux-context/: SKILL.md
.agents/skills/zenmux-image-generation/: SKILL.md  pyproject.toml
.agents/skills/zenmux-image-generation/references/: awesome-gpt-image-2.md  awesome-nano-banana-pro-prompts.md  openai-python-images-edit.md  openai-python-images-generate.md  zenmux-image-generation.md
.agents/skills/zenmux-image-generation/scripts/: generate_gemini.py  generate_openai.py  image_common.py  list_models.sh  refresh_references.sh
.claude/skills/: opencli-browser  opencli-usage  vibe-product-design  vibe-writing  zenmux-context  zenmux-image-generation
.context/references/: references-list.txt
messages/: en.json  zh.json
public/: llm.txt  robots.txt
scripts/: sync-claude-skills-to-agents.sh  update-references.sh
src/: middleware.ts
src/app/: globals.css  sitemap.ts
src/app/[locale]/: color-wordmark.tsx  layout.tsx  page.tsx  site-header.tsx  specimen-plate.tsx
src/i18n/: request.ts  routing.ts
(+14 files in other folders)
